# starlet-logger

./: CMakeLists.txt  README.md
inc/: logger.hpp
inc/starlet-logger/: logger.hpp
src/: logger.cpp
tests/: CMakeLists.txt  logger_test.cpp
